solve 80% of problem on 03-grid-layout
unsolved problem
 - grid inside nav is not centered vertically
 - text content inside side-content is not centered vertically

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,10 +1,16 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: repeat(2, 1fr) 3fr 1fr;
+  /* align-items: start; */
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +23,36 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  grid-row: 1;
+
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  align-items: center;
+  gap: 4px;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  list-style: none;
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
 }
 
 .sidebar {
-  background-color: #C50208;
+  background-color: #c50208;
+  grid-column: 1;
+  grid-row: 2/ 5;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -36,7 +63,6 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
@@ -45,16 +71,33 @@
 }
 
 .nav {
-  background-color: #C50208;
+  background-color: #c50208;
+  grid-column: span 1;
+  grid-row: span 1;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  gap: 4px;
 }
 
 .nav ul li {
-  font-size: 16px;
+  font-size: 26px;
   text-transform: uppercase;
+  list-style: none;
 }
 
 .article {
   background-color: #bccbde;
+  grid-column: span 1;
+  grid-row: span 3;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 200px;
+  gap: 15px;
 }
 
 .article p {
@@ -65,7 +108,7 @@
 }
 
 .article .card {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   color: black;
   text-align: center;
 }
@@ -83,6 +126,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: span 2;
+  grid-row: span 1;
 }
 
 .footer p {
